FACES-1981 Please consider this alloy:dataList component for inclusion in the showcase.

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -48,6 +48,12 @@ alloy-commandlink-immediate=When the [vdldoc:alloy:commandLink:immediate] attrib
 alloy-commandlink-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:commandLink:action] attribute. By specifying a `&lt;redirect&gt;` element in the `navigation-rule`, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandlink-param=URL *parameters* can be specified via the [vdldoc:alloy:commandLink:action] attribute. By specifying a `faces-redirect=true` parameter in the action attribute, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandlink-value-attribute=Although the component&apos;s [vdldoc:alloy:commandLink:value] attribute is *read-only* (can&apos;t be changed via form submission), it can be used to determine that an item has been selected by the user.
+alloy-datalist=[javadoc:com.liferay.faces.alloy.component.datatable.DataList] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders data in a list layout.
+alloy-datalist-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render list items *dynamically* when the [vdldoc:alloy:dataItem] content is set via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:dataList:var] attribute can be used to introduce a variable name into the EL when iterating over the model.  The [vdldoc:f:facet] tag with its [vdldoc:f:facet:name]=`description` may optionally be used to render data description tags for use with lists of [vdldoc:alloy:dataList:type]=`description`.
+alloy-datalist-general=An [vdldoc:alloy:dataList] basic configuration is controlled by the [vdldoc:alloy:dataList:type] attribute and an optional [vdldoc:f:facet] tag.
+alloy-datalist-general-example-1=The [vdldoc:alloy:dataList:type] attribute will default to `unordered`
+alloy-datalist-general-example-2=The [vdldoc:alloy:dataList:type] attribute may also take the values of `ordered` or `description`
+alloy-datalist-selection=You can use children in your [vdldoc:alloy:dataItem]s to create a selection list with actionListeners.
 alloy-datatable=[javadoc:com.liferay.faces.alloy.component.datatable.DataTable] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders a `table` element with tabular data and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags. Since it extends [javadoc:javax.faces.component.html.HtmlDataTable], it supports all the features of [vdldoc:h:dataTable].
 alloy-datatable-general=The [vdldoc:alloy:dataTable:value] attribute tag must be bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:dataTable:var] attribute is used to introduce a variable name into the EL when iterating over the model.
 alloy-datatable-filter=The table rows contained in the [javadoc:javax.faces.model.DataModel] can be limited by *filter* criteria provided by the user.
@@ -343,6 +349,7 @@ description=Description
 default=Default
 default-value=Default Value
 delete=Delete
+description-list=Description List
 disable=Disable
 dislike=Dislike
 drop-down=Dropdown
@@ -389,6 +396,7 @@ mini=Mini
 misc=Miscellaneous
 modal=Modal
 model-value=Model Value
+more-info=More Info
 multimedia=Multimedia
 multiple=Multiple
 modules=Modules
@@ -401,6 +409,7 @@ note-chromium-issue-4579=Note: <a href="https://code.google.com/p/chromium/issue
 note-multiple-selection-not-available-for-inputdate=*Note:* Multiple selection is not available for [vdldoc:alloy:inputDate].
 online=Online
 open-orders=Open Orders
+ordered-list=Ordered List
 output=Output
 pagination=Pagination
 panel=Panel
@@ -432,6 +441,7 @@ required-message=This is a required field
 resource=Resource
 right-to-left=Right-To-Left
 select=Select
+selection=Selection
 selected-tab=Selected Tab
 server-events=Server Events
 size=Size
@@ -465,6 +475,7 @@ text-box-1=Text Box #1
 text-box-2=Text Box #2
 to-param-page=To Param page
 tooltip-value=Tooltip Value
+unordered-list=Unordered List
 usage=Usage
 user=User
 valid-date-range=Valid Date Range
