--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -88,7 +88,6 @@ alloy-importconstants-general=Constants can be imported from `class`, `enum`, or
 alloy-importconstants-general-example-1=Importing from a Java class
 alloy-importconstants-general-example-2=Importing from a Java enum
 alloy-importconstants-general-example-3=Importing from a Java interface
-alloy-input-date-benefits-description=since it combines date selection, text input, and automatic [javadoc:java.util.Date] conversion in a single component. The only advantage of using [vdldoc:alloy:pickDate] is that it can be *associated* with an [vdldoc:alloy:inputTextarea] in order to select *multiple dates*.
 alloy-inputdate=[javadoc:com.liferay.faces.alloy.component.inputdate.InputDate] is a [javadoc:javax.faces.component.UIInput] component that renders a textbox and a popup a calendar with selectable dates. The component attepts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built in [javadoc:javax.faces.convert.DateTimeConverter].
 alloy-inputdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:inputDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
 alloy-inputdate-general=The [vdldoc:alloy:inputDate:showOn] attribute specifies which events will popup the calendar.
@@ -96,11 +95,14 @@ alloy-inputdate-general-example-1=Specifying *focus* (the default) for the `show
 alloy-inputdate-general-example-2=Specifying *button* for the `showOn` attribute.
 alloy-inputdate-general-example-3=Specifying *both* for the `showOn` attribute.
 alloy-inputdate-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag.
+alloy-inputdate-instant-ajax-example-1=Instant-Ajax when a date is selected
+alloy-inputdate-instant-ajax-example-2=Instant-Ajax when a date is selected or when the user enters a value
 alloy-inputdate-localization=A *custom locale* can be specified via the [vdldoc:alloy:inputDate:locale] attribute.
 alloy-inputdate-localization-example-1=Hard coded Brazilian Portuguese locale
 alloy-inputdate-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
 alloy-inputdate-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:alloy:inputDate:minimumDate] and [vdldoc:alloy:inputDate:maximumDate] attributes. The component performs server side validation to ensure that submitted values are within the specified range.
 alloy-inputdate-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:alloy:inputDate:panes] attribute (maximum of 3).
+alloy-inputdate-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`dateSelected` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.inputdate.InputDateEvent]. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:inputDate:eventListener] attribute.
 alloy-inputfile=[javadoc:com.liferay.faces.alloy.component.inputfile.InputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input&gt;` element with `type="file"`. Since it extends [javadoc:javax.faces.component.html.HtmlInputFile], it supports all the features of [vdldoc:h:inputFile] and also supports multi-file uploads, instant-Ajax, preview, upload progress, and validation.
 alloy-input-file-benefits-description=since it works in *portlet and webapp* environments and also supports preview, upload progress, and validation.
 alloy-inputfile-general=By default, one file can be uploaded as a non-Ajax (full-page) postback. 
@@ -206,18 +208,6 @@ alloy-panelgroup=[javadoc:com.liferay.faces.alloy.component.panelgroup.PanelGrou
 alloy-panelgroup-general=The [vdldoc:alloy:panelGroup:layout] attribute specifies whether the component renders a `span` or a `div`.
 alloy-panelgroup-general-example-1=By default, the component renders a `span`.
 alloy-panelgroup-general-example-2=Specifying `block` for the [vdldoc:alloy:panelGroup:layout] attribute causes the component to render a `div`.
-alloy-pickdate=[javadoc:com.liferay.faces.alloy.component.pickdate.PickDate] is a [javadoc:javax.faces.component.UIComponent] that renders a popup a calendar with selectable dates.
-alloy-pickdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:pickDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
-alloy-pickdate-general=The component can be attached to an [vdldoc:alloy:inputText] or [vdldoc:alloy:inputTextarea] via the [vdldoc:alloy:pickDate:for] attribute.
-alloy-pickdate-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child of the input tag.
-alloy-pickdate-localization=A *custom locale* can be specified via the [vdldoc:alloy:pickDate:locale] attribute.
-alloy-pickdate-localization-example-1=Hard coded Brazilian Portuguese locale
-alloy-pickdate-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
-alloy-pickdate-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:alloy:pickDate:minimumDate] and [vdldoc:alloy:pickDate:maximumDate] attributes.
-alloy-pickdate-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:alloy:pickDate:panes] attribute (maximum of 3).
-alloy-pickdate-multiple-selection=The *date selection mode* can be specified via the [vdldoc:alloy:pickDate:selectionMode] attribute. Valid values include `single` (the default), `multiple,` or `multiple-sticky`. The character(s) separating the selected dates can be specified via the [vdldoc:alloy:pickDate:dateSeparator] attribute.
-alloy-pickdate-multiple-selection-example-1=Hold down shift or control to select multiple dates
-alloy-pickdate-multiple-selection-example-2=Pop up the pickDate multiple times to select multiple dates
 alloy-popover=[javadoc:com.liferay.faces.alloy.component.popover.Popover] is a [javadoc:javax.faces.component.UIPanel] component that that renders a `&lt;div&gt;` element that is initially styled with `display:none` so that it can be popped-up as an *overlay* by calling the JavaScript API. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 alloy-popover-general=The component *must be associated* with another component (such as [vdldoc:alloy:button]) via the [vdldoc:alloy:popover:for] attribute, so that the popover can be displayed nearby. When [vdldoc:alloy:dialog:dismissible]=`true` the dialog can be dismissed by clicking outside of it.<br /><br />*JavaScript API:*<ul><li>`show()` causes the popover to be visible</li><li>`hide()` causes the popover to be invisible</li><li>`toggle()` causes the popover visibility to be toggled</li></ul>
 alloy-popover-general-example-1=Default usage with [vdldoc:alloy:popover:dismissible]=`true`
@@ -393,12 +383,10 @@ multimedia=Multimedia
 multiple=Multiple
 modules=Modules
 multiple-panes=Multiple Panes
-multiple-selection=Multiple Selection
 navigation=Navigation
 next=Next
 note=Note
 note-chromium-issue-4579=Note: <a href="https://code.google.com/p/chromium/issues/detail?id=4579" target="_blank">Chromium Issue#4579</a> may cause this component to display *more than one* menu item.
-note-multiple-selection-not-available-for-inputdate=*Note:* Multiple selection is not available for [vdldoc:alloy:inputDate].
 online=Online
 open-orders=Open Orders
 output=Output
@@ -441,7 +429,6 @@ source-code=Source Code
 step-1=Step 1
 step-2=Step 2
 step-3=Step 3
-sticky-multiple-selection=Sticky Multiple Selection
 submit=Submit
 submit-and-re-render-field=Submit and Re-Render Field
 submit-and-re-render-form=Submit and Re-Render Form
