FACES-1981 Develop alloy:dataList component FACES-1714 Develop Liferay Faces Showcase (added use-cases for alloy:dataList)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -48,6 +48,13 @@ alloy-commandlink-immediate=When the [vdldoc:alloy:commandLink:immediate] attrib
 alloy-commandlink-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:commandLink:action] attribute. By specifying a `&lt;redirect&gt;` element in the `navigation-rule`, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandlink-param=URL *parameters* can be specified via the [vdldoc:alloy:commandLink:action] attribute. By specifying a `faces-redirect=true` parameter in the action attribute, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandlink-value-attribute=Although the component&apos;s [vdldoc:alloy:commandLink:value] attribute is *read-only* (can&apos;t be changed via form submission), it can be used to determine that an item has been selected by the user.
+alloy-datalist=[javadoc:com.liferay.faces.alloy.component.datalist.DataList] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders `&lt;ul&gt;` (unordered), `&lt;ol&gt;` (ordered), or `&lt;dl&gt;` (description) lists.
+alloy-datalist-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render list items *dynamically* when the [vdldoc:alloy:dataItem] content is set via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:dataList:var] attribute can be used to introduce a variable name into the EL when iterating over the model. When [vdldoc:alloy:dataList:type]=`description` an optional [vdldoc:f:facet] with [vdldoc:f:facet:name]=`description` can be used to render `&lt;dd&gt;` description tags.
+alloy-datalist-general=The type of list is specified via the [vdldoc:alloy:dataList:type] attribute. List items are specified with child [vdldoc:alloy:dataItem] tags.
+alloy-datalist-general-example-1=Specifying [vdldoc:alloy:dataList:type]=`unordered` (the default)
+alloy-datalist-general-example-2=Specifying [vdldoc:alloy:dataList:type]=`ordered`
+alloy-datalist-general-example-3=Specifying [vdldoc:alloy:dataList:type]=`description`
+alloy-datalist-selection=You can use children in your [vdldoc:alloy:dataItem]s to create a selection list with actionListeners.
 alloy-datatable=[javadoc:com.liferay.faces.alloy.component.datatable.DataTable] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders a `table` element with tabular data and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags. Since it extends [javadoc:javax.faces.component.html.HtmlDataTable], it supports all the features of [vdldoc:h:dataTable].
 alloy-datatable-general=The [vdldoc:alloy:dataTable:value] attribute tag must be bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:dataTable:var] attribute is used to introduce a variable name into the EL when iterating over the model.
 alloy-datatable-filter=The table rows contained in the [javadoc:javax.faces.model.DataModel] can be limited by *filter* criteria provided by the user.
@@ -379,6 +386,7 @@ mini=Mini
 misc=Miscellaneous
 modal=Modal
 model-value=Model Value
+more-info=More Info
 multimedia=Multimedia
 multiple=Multiple
 modules=Modules
@@ -420,6 +428,7 @@ required-message=This is a required field
 resource=Resource
 right-to-left=Right-To-Left
 select=Select
+selection=Selection
 selected-tab=Selected Tab
 server-events=Server Events
 size=Size
