FACES-1714 Develop Liferay Faces Showcase (added preliminary descriptions for c:, f:, and ui: tags)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -305,6 +305,14 @@ bridge-inputfile-multiple=Multi-file upload is supported by setting the HTML5 pa
 bridge-inputfile-portlet-only=The [vdldoc:bridge:inputFile] component is a *legacy* feature of Liferay Faces Bridge. Although it has the benefit of supporting *multi-file uploads*, it only works in a *portlet environment* (not in a webapp environment).
 button=Button
 buttonlink=Button/Link
+c-choose=The JSF runtime includes [vdldoc:c:choose] which is a Facelet [javadoc:javax.faces.view.facelets.TagHandler] implementation of the JSTL `&lt;c:choose&gt;` JSP tag.
+c-choose-general=
+c-foreach=The JSF runtime includes [vdldoc:c:forEach] which is a Facelet [javadoc:javax.faces.view.facelets.TagHandler] implementation of the JSTL `&lt;c:forEach&gt;` JSP tag.
+c-foreach-general=
+c-if=The JSF runtime includes [vdldoc:c:if] which is a Facelet [javadoc:javax.faces.view.facelets.TagHandler] implementation of the JSTL `&lt;c:if&gt;` JSP tag.
+c-if-general=
+c-set=The JSF runtime includes [vdldoc:c:set] which is a Facelet [javadoc:javax.faces.view.facelets.TagHandler] implementation of the JSTL `&lt;c:set&gt;` JSP tag.
+c-set-general=
 cancel=Cancel
 choose-files=Choose Files
 clear-the-value-of-the-hidden-input=Clear the value of the hidden input
@@ -349,6 +357,64 @@ enable=Enable
 error=Error
 example=Example
 expand-all=Expand All
+f-ajax=The JSF runtime includes the [vdldoc:f:ajax] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-ajax-general=
+f-attribute=The JSF runtime includes the [vdldoc:f:attribute] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-attribute-general=
+f-attributes=The JSF runtime includes the [vdldoc:f:attributes] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-attributes-general=
+f-convertdatetime=The JSF runtime includes the [vdldoc:f:convertDateTime] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-convertdatetime-general=
+f-converter=The JSF runtime includes the [vdldoc:f:converter] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-converter-general=
+f-convertnumber=The JSF runtime includes the [vdldoc:f:convertNumber] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-convertnumber-general=
+f-event=The JSF runtime includes the [vdldoc:f:event] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-event-general=
+f-facet=The JSF runtime includes the [vdldoc:f:facet] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-facet-general=
+f-loadbundle=The JSF runtime includes the [vdldoc:f:loadBundle] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-loadbundle-general=
+f-metadata=The JSF runtime includes the [vdldoc:f:metadata] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-metadata-general=
+f-param=The JSF runtime includes the [vdldoc:f:param] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-param-general=
+f-passthroughattribute=The JSF runtime includes the [vdldoc:f:passThroughAttribute] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-passthroughattribute-general=
+f-passthroughattributes=The JSF runtime includes the [vdldoc:f:passThroughAttributes] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-passthroughattributes-general=
+f-phaselistener=The JSF runtime includes the [vdldoc:f:phaseListener] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-phaselistener-general=
+f-resetvalues=The JSF runtime includes the [vdldoc:f:resetValues] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-resetvalues-general=
+f-selectitem=The JSF runtime includes the [vdldoc:f:selectItem] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-selectitem-general=
+f-selectitems=The JSF runtime includes the [vdldoc:f:selectItems] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-selectitems-general=
+f-setpropertyactionlistener=The JSF runtime includes the [vdldoc:f:setPropertyActionListener] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-setpropertyactionlistener-general=
+f-validatebean=The JSF runtime includes the [vdldoc:f:validateBean] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-validatebean-general=
+f-validatedoublerange=The JSF runtime includes the [vdldoc:f:validateDoubleRange] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-validatedoublerange-general=
+f-validatelength=The JSF runtime includes the [vdldoc:f:validateLength] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-validatelength-general=
+f-validatelongrange=The JSF runtime includes the [vdldoc:f:validateLongRange] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-validatelongrange-general=
+f-validateregex=The JSF runtime includes the [vdldoc:f:validateRegex] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-validateregex-general=
+f-validaterequired=The JSF runtime includes the [vdldoc:f:validateRequired] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-validaterequired-general=
+f-validator=The JSF runtime includes the [vdldoc:f:validator] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-validator-general=
+f-valuechangelistener=The JSF runtime includes the [vdldoc:f:valueChangeListener] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-valuechangelistener-general=
+f-view=The JSF runtime includes the [vdldoc:f:view] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-view-general=
+f-viewaction=The JSF runtime includes the [vdldoc:f:viewAction] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-viewaction-general=
+f-viewparam=The JSF runtime includes the [vdldoc:f:viewParam] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+f-viewparam-general=
 facescore=Faces Core
 facelets=Facelets
 favorite-liferay-benefit=Favorite Liferay Benefit
@@ -464,6 +530,28 @@ text-box-1=Text Box #1
 text-box-2=Text Box #2
 to-param-page=To Param page
 tooltip-value=Tooltip Value
+ui-component=The JSF runtime includes the [vdldoc:ui:component] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+ui-component-general=
+ui-composition=The JSF runtime includes the [vdldoc:ui:composition] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+ui-composition-general=
+ui-debug=The JSF runtime includes the [vdldoc:ui:debug] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+ui-debug-general=
+ui-decorate=The JSF runtime includes the [vdldoc:ui:decorate] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+ui-decorate-general=
+ui-define=The JSF runtime includes the [vdldoc:ui:define] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+ui-define-general=
+ui-fragment=The JSF runtime includes the [vdldoc:ui:fragment] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+ui-fragment-general=
+ui-include=The JSF runtime includes the [vdldoc:ui:include] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+ui-include-general=
+ui-insert=The JSF runtime includes the [vdldoc:ui:insert] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+ui-insert-general=
+ui-param=The JSF runtime includes the [vdldoc:ui:param] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+ui-param-general=
+ui-remove=The JSF runtime includes the [vdldoc:ui:remove] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+ui-remove-general=
+ui-repeat=The JSF runtime includes the [vdldoc:ui:repeat] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
+ui-repeat-general=
 usage=Usage
 user=User
 valid-date-range=Valid Date Range
