FACES-1714 Develop Liferay Faces Showcase (fixed example descriptions for alloy:inputDate)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -98,9 +98,9 @@ alloy-importconstants-general-example-3=Importing from a Java interface
 alloy-inputdate=[javadoc:com.liferay.faces.alloy.component.inputdate.InputDate] is a [javadoc:javax.faces.component.UIInput] component that renders a textbox and a popup a calendar with selectable dates. The component attepts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built in [javadoc:javax.faces.convert.DateTimeConverter].
 alloy-inputdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:inputDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
 alloy-inputdate-general=The [vdldoc:alloy:inputDate:showOn] attribute specifies which events will popup the calendar.
-alloy-inputdate-general-example-1=Specifying *focus* (the default) for the `showOn` attribute.
-alloy-inputdate-general-example-2=Specifying *button* for the `showOn` attribute.
-alloy-inputdate-general-example-3=Specifying *both* for the `showOn` attribute.
+alloy-inputdate-general-example-1=Specifying [vdldoc:alloy:inputDate:showOn]=`focus` (the default)
+alloy-inputdate-general-example-2=Specifying [vdldoc:alloy:inputDate:showOn]=`button`
+alloy-inputdate-general-example-3=Specifying [vdldoc:alloy:inputDate:showOn]=`both`
 alloy-inputdate-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag.
 alloy-inputdate-instant-ajax-example-1=Instant-Ajax when a date is selected
 alloy-inputdate-instant-ajax-example-2=Instant-Ajax when a date is selected or when the user enters a value
