FACES-1954 Develop alloy:inputTime component FACES-1897 Develop alloy:inputDate component (Refactor inputDate to be more consistent with inputTime.)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -107,7 +107,7 @@ alloy-inputdate-instant-ajax-example-2=Instant-Ajax when a date is selected or w
 alloy-inputdate-localization=A *custom locale* can be specified via the [vdldoc:alloy:inputDate:locale] attribute.
 alloy-inputdate-localization-example-1=Hard coded Brazilian Portuguese locale
 alloy-inputdate-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
-alloy-inputdate-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:alloy:inputDate:minimumDate] and [vdldoc:alloy:inputDate:maximumDate] attributes. The component performs server side validation to ensure that submitted values are within the specified range.
+alloy-inputdate-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:alloy:inputDate:minDate] and [vdldoc:alloy:inputDate:maxDate] attributes. The component performs server side validation to ensure that submitted values are within the specified range.
 alloy-inputdate-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:alloy:inputDate:panes] attribute (maximum of 3).
 alloy-inputdate-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`dateSelected` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.inputdate.InputDateEvent]. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:inputDate:eventListener] attribute.
 alloy-inputfile=[javadoc:com.liferay.faces.alloy.component.inputfile.InputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input&gt;` element with `type="file"`. Since it extends [javadoc:javax.faces.component.html.HtmlInputFile], it supports all the features of [vdldoc:h:inputFile] and also supports multi-file uploads, instant-Ajax, preview, upload progress, and validation.
@@ -148,6 +148,24 @@ alloy-inputtextarea-size=The *size* of the rendered textarea can be specified vi
 alloy-inputtextarea-size-example-1=Setting the size via the [vdldoc:alloy:inputTextarea:rows] and [vdldoc:alloy:inputTextarea:cols] attributes
 alloy-inputtextarea-size-example-2=Setting the size via the [vdldoc:alloy:inputTextarea:style] attribute
 alloy-inputtextarea-validation=The [vdldoc:alloy:inputTextarea:value] attribute can be *validated* via the [vdldoc:alloy:inputTextarea:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:validatorMessage] attribute.
+alloy-inputtime=[javadoc:com.liferay.faces.alloy.component.inputtime.InputTime] is a [javadoc:javax.faces.component.UIInput] component that renders a textbox and a popup a autocomplete with selectable times. The component attepts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built in [javadoc:javax.faces.convert.DateTimeConverter].
+alloy-inputtime-autocomplete-features=The *filtering* and *highlighting* features of the component's autocomplete can be specified via the [vdldoc:alloy:inputTime:filterType] and [vdldoc:alloy:inputTime:highlighterType] attributes.
+alloy-inputtime-autocomplete-features-example-1=To *filter* the selectable times based on user input, specify a filter from <a href="http://docs.liferay.com/faces/4.2/vdldoc/alloy/inputTime.html#filter" target="_blank">this list</a>.
+alloy-inputtime-autocomplete-features-example-2=To *highlight* the selectable times based on user input, specify a filter from <a href="http://docs.liferay.com/faces/4.2/vdldoc/alloy/inputTime.html#highlighter" target="_blank">this list</a>.
+alloy-inputtime-general=The [vdldoc:alloy:inputDate:showOn] attribute specifies which events will popup the autocomplete.
+alloy-inputdate-general-example-1=Specifying [vdldoc:alloy:inputTime:showOn]=`focus` (the default)
+alloy-inputdate-general-example-2=Specifying [vdldoc:alloy:inputTime:showOn]=`button`
+alloy-inputdate-general-example-3=Specifying [vdldoc:alloy:inputTime:showOn]=`both`
+alloy-inputtime-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag.
+alloy-inputdate-instant-ajax-example-1=Instant-Ajax when a time is selected
+alloy-inputdate-instant-ajax-example-2=Instant-Ajax when a time is selected or when the user enters a value
+alloy-inputtime-localization=A *custom locale* can be specified via the [vdldoc:alloy:inputTime:locale] attribute.
+alloy-inputtime-localization-example-1=Hard coded Brazilian Portuguese locale 
+alloy-inputtime-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
+alloy-inputtime-min-max-time=*Minimum and maximum times* can be specified via the [vdldoc:alloy:inputTime:minTime] and [vdldoc:alloy:inputTime:maxTime] attributes according to the pattern `HH:mm:ss`.
+alloy-inputtime-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`timeSelected` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.inputtime.InputTimeEvent]. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:inputTime:eventListener] attribute.
+alloy-inputtime-time-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:inputTime:timePattern] attribute. The syntax of the time pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
+alloy-inputtime-timestamp-step=The number of *seconds* between each selectable timestamp can be specified via the [vdldoc:alloy:inputTime:step] attribute.
 alloy-link=[javadoc:com.liferay.faces.alloy.component.link.Link] is a [javadoc:javax.faces.component.UIOutcomeTarget] component that renders an `&lt;a&gt;` element (hyperlink). Since it extends [javadoc:javax.faces.component.html.HtmlLink], it supports all the features of [vdldoc:h:link].
 alloy-link-benefits-description=is intended to be used to render a hyperlink that *navigates* to other JSF views via HTTP GET, or perhaps to re-render the same view with different *view parameters* via [vdldoc:f:param] child tags.
 alloy-link-general=The text/content of the hyperlink can be specified via the [vdldoc:alloy:link:value] of the component or by specifying child components. Setting [vdldoc:alloy:link:includeViewParams]=`true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
@@ -295,6 +313,7 @@ alloy-video-general=The general usage of the component is to set the [vdldoc:all
 answer-at-stackoverflow=answer at stackoverflow
 append-new-files=Append New Files
 attribute-value=Attribute Value
+autocomplete-features=AutoComplete Features
 back-to-navigation-with=Back to Navigation with
 birthday=Birthday
 block=Block
@@ -451,6 +470,7 @@ max-length-events=Max Length Events
 menu=Menu
 message-styling=Message Styling
 min-max-date=Min/Max Date
+min-max-time=Min/Max Time
 mini=Mini
 misc=Miscellaneous
 modal=Modal
@@ -525,6 +545,9 @@ this-is-column-3=This is column 3 with width="33"
 this-is-some-popover-text=This is some popover text
 this-text-is-inside-a-span-html-tag=This text is inside a <span> HTML tag
 this-text-is-inside-a-div-html-tag=This text is inside a <div> HTML tag
+time=Time
+time-pattern=Time Pattern
+timestamp-step=Timestamp Step
 text-for-a-link=Text for a link
 text-box-1=Text Box #1
 text-box-2=Text Box #2
