FACES-1954 Develop alloy:inputTime component FACES-1897 Develop alloy:inputDate component (Refactor inputDate to be more consistent with inputTime) FACES-1714 Develop Liferay Faces Showcase (added use-cases for inputDate and made inputDate use-cases consistent with inputTime)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -95,8 +95,9 @@ alloy-importconstants-general=Constants can be imported from `class`, `enum`, or
 alloy-importconstants-general-example-1=Importing from a Java class
 alloy-importconstants-general-example-2=Importing from a Java enum
 alloy-importconstants-general-example-3=Importing from a Java interface
-alloy-inputdate=[javadoc:com.liferay.faces.alloy.component.inputdate.InputDate] is a [javadoc:javax.faces.component.UIInput] component that renders a textbox and a popup a calendar with selectable dates. The component attepts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built in [javadoc:javax.faces.convert.DateTimeConverter].
+alloy-inputdate=[javadoc:com.liferay.faces.alloy.component.inputdate.InputDate] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input type="text"&gt;` element and a *calendar popover* with selectable dates. The component attempts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built-in [javadoc:javax.faces.convert.DateTimeConverter].
 alloy-inputdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:inputDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
+alloy-inputdate-date-pattern-example=Specifying `datePattern="EEEE, MMM dd, yyyy"`
 alloy-inputdate-general=The [vdldoc:alloy:inputDate:showOn] attribute specifies which events will popup the calendar.
 alloy-inputdate-general-example-1=Specifying [vdldoc:alloy:inputDate:showOn]=`focus` (the default)
 alloy-inputdate-general-example-2=Specifying [vdldoc:alloy:inputDate:showOn]=`button`
@@ -107,7 +108,8 @@ alloy-inputdate-instant-ajax-example-2=Instant-Ajax when a date is selected or w
 alloy-inputdate-localization=A *custom locale* can be specified via the [vdldoc:alloy:inputDate:locale] attribute.
 alloy-inputdate-localization-example-1=Hard coded Brazilian Portuguese locale
 alloy-inputdate-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
-alloy-inputdate-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:alloy:inputDate:minimumDate] and [vdldoc:alloy:inputDate:maximumDate] attributes. The component performs server side validation to ensure that submitted values are within the specified range.
+alloy-inputdate-min-max=*Minimum* and *maximum* dates can be specified via the [vdldoc:alloy:inputDate:minDate] and [vdldoc:alloy:inputDate:maxDate] attributes. The component performs server side validation to ensure that submitted values are within the specified range.
+alloy-inputdate-min-max-example=Specifying `minDate=""` and `maxDate=""`
 alloy-inputdate-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:alloy:inputDate:panes] attribute (maximum of 3).
 alloy-inputdate-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`dateSelected` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.inputdate.InputDateEvent]. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:inputDate:eventListener] attribute.
 alloy-inputfile=[javadoc:com.liferay.faces.alloy.component.inputfile.InputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input&gt;` element with `type="file"`. Since it extends [javadoc:javax.faces.component.html.HtmlInputFile], it supports all the features of [vdldoc:h:inputFile] and also supports multi-file uploads, instant-Ajax, preview, upload progress, and validation.
@@ -148,6 +150,26 @@ alloy-inputtextarea-size=The *size* of the rendered textarea can be specified vi
 alloy-inputtextarea-size-example-1=Setting the size via the [vdldoc:alloy:inputTextarea:rows] and [vdldoc:alloy:inputTextarea:cols] attributes
 alloy-inputtextarea-size-example-2=Setting the size via the [vdldoc:alloy:inputTextarea:style] attribute
 alloy-inputtextarea-validation=The [vdldoc:alloy:inputTextarea:value] attribute can be *validated* via the [vdldoc:alloy:inputTextarea:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:validatorMessage] attribute.
+alloy-inputtime=[javadoc:com.liferay.faces.alloy.component.inputtime.InputTime] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input type="text"&gt;` element and a *list popover* with selectable times. The component attempts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built-in [javadoc:javax.faces.convert.DateTimeConverter].
+alloy-inputtime-filter=The list of times can be *filtered* according to user input via the [vdldoc:alloy:inputTime:filterType] attribute.
+alloy-inputtime-filter-example=Specifying `filterType="phraseMatch"`
+alloy-inputtime-general=The [vdldoc:alloy:inputDate:showOn] attribute specifies which events will popup the list of selectable times.
+alloy-inputtime-general-example-1=Specifying [vdldoc:alloy:inputTime:showOn]=`focus` (the default)
+alloy-inputtime-general-example-2=Specifying [vdldoc:alloy:inputTime:showOn]=`button`
+alloy-inputtime-general-example-3=Specifying [vdldoc:alloy:inputTime:showOn]=`both`
+alloy-inputtime-highlight=Times can be *highlighted* according to user input via the [vdldoc:alloy:inputTime:highlightType] attribute.
+alloy-inputtime-highlight-example=Specifying `highlightType="phraseMatch"`
+alloy-inputtime-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag.
+alloy-inputtime-instant-ajax-example-1=Instant-Ajax when a time is selected
+alloy-inputtime-instant-ajax-example-2=Instant-Ajax when a time is selected or when the user enters a value
+alloy-inputtime-localization=A *custom locale* can be specified via the [vdldoc:alloy:inputTime:locale] attribute.
+alloy-inputtime-localization-example-1=Hard coded Brazilian Portuguese locale 
+alloy-inputtime-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
+alloy-inputtime-min-max=*Minimum* and *maximum* times can be specified via the [vdldoc:alloy:inputTime:minTime] and [vdldoc:alloy:inputTime:maxTime] attributes according to the pattern `HH:mm:ss`.
+alloy-inputtime-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`timeSelect` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.inputtime.TimeSelectEvent]. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:inputTime:timeSelectListener] attribute.
+alloy-inputtime-time-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:inputTime:timePattern] attribute. The syntax of the time pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
+alloy-inputtime-time-pattern-example=Specifying `timePattern="hh:mm:ss a"`
+alloy-inputtime-step=The number of *seconds* between each selectable time can be specified via the [vdldoc:alloy:inputTime:step] attribute.
 alloy-link=[javadoc:com.liferay.faces.alloy.component.link.Link] is a [javadoc:javax.faces.component.UIOutcomeTarget] component that renders an `&lt;a&gt;` element (hyperlink). Since it extends [javadoc:javax.faces.component.html.HtmlLink], it supports all the features of [vdldoc:h:link].
 alloy-link-benefits-description=is intended to be used to render a hyperlink that *navigates* to other JSF views via HTTP GET, or perhaps to re-render the same view with different *view parameters* via [vdldoc:f:param] child tags.
 alloy-link-general=The text/content of the hyperlink can be specified via the [vdldoc:alloy:link:value] of the component or by specifying child components. Setting [vdldoc:alloy:link:includeViewParams]=`true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
@@ -421,6 +443,7 @@ favorite-liferay-benefit=Favorite Liferay Benefit
 field-label=Field Label
 fieldset-legend=Fieldset Legend
 filter=Filter
+highlight=Highlight
 first-name=First Name
 form-action-attribute-view-params-description=The `action` attribute of the rendered `&lt;form&gt;` (shown below) contains view parameters in the query-string. 
 general=General
@@ -450,7 +473,7 @@ localization=Localization
 max-length-events=Max Length Events
 menu=Menu
 message-styling=Message Styling
-min-max-date=Min/Max Date
+min-max=Min/Max
 mini=Mini
 misc=Miscellaneous
 modal=Modal
@@ -507,6 +530,7 @@ source-code=Source Code
 step-1=Step 1
 step-2=Step 2
 step-3=Step 3
+step=Step
 submit=Submit
 submit-and-re-render-field=Submit and Re-Render Field
 submit-and-re-render-form=Submit and Re-Render Form
@@ -525,6 +549,8 @@ this-is-column-3=This is column 3 with width="33"
 this-is-some-popover-text=This is some popover text
 this-text-is-inside-a-span-html-tag=This text is inside a <span> HTML tag
 this-text-is-inside-a-div-html-tag=This text is inside a <div> HTML tag
+time=Time
+time-pattern=Time Pattern
 text-for-a-link=Text for a link
 text-box-1=Text Box #1
 text-box-2=Text Box #2
@@ -555,6 +581,7 @@ ui-repeat-general=
 usage=Usage
 user=User
 valid-date-range=Valid Date Range
+valid-time-range=Valid Time Range
 validating-an-email-address-using-validator-attribute=Validating an *email address* using the [vdldoc:alloy:inputTextarea:validator] attribute
 validating-an-email-address-using-f-validateregex=Validating an *email address* using an [vdldoc:f:validateRegex] child tag
 validation=Validation
